[package]
name = "tsukuyomi-juniper"
description = """
A extension of Tsukuyomi web framework for supporting GraphQL serving based on Juniper.
"""
version = "0.2.0-dev"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tsukuyomi-juniper"
repository = "https://github.com/tsukuyomi-rs/tsukuyomi-juniper.git"
readme = "README.md"

include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[dependencies]
tsukuyomi = { git = "https://github.com/tsukuyomi-rs/tsukuyomi.git" }
juniper = "0.9.2"

bytes = "0.4"
failure = "0.1"
futures = "0.1.21"
http = "0.1.6"
mime = "0.3"
percent-encoding = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.4"

[dev-dependencies.juniper]
version = "0.9.2"
features = ["expose-test-schema", "serde_json"]
